# cfd-3d

./: CMakeLists.txt  README.md  config.h.in
configs/: AGGREGATION_THRUST_BJ.json  CHEB_SOLVER_NOPREC.json  CLASSICAL_CGF_CYCLE.json  FGMRES.json  FGMRES_NOPREC.json  PBICGSTAB_NOPREC.json  PCGF_CLASSICAL_F_JACOBI.json  PCGF_F.json  PCGF_V.json  PCG_AGGREGATION_JACOBI.json  PCG_DILU.json  PCG_NOPREC.json
src/: bnd_cond.cpp  bnd_cond.h  config.h  global.cpp  global.h  main.cpp
src/mesh/: MeshReader.cpp  MeshReader.h  MeshReaderGmsh.cpp  MeshReaderGmsh.h  MeshReaderWIASTetGen.cpp  MeshReaderWIASTetGen.h  grid.cpp  grid.h
src/methods/: Limiter.cpp  Limiter.h  LimiterBJ.cpp  LimiterBJ.h  LimiterCockburn.cpp  LimiterCockburn.h  LimiterEntropy.cpp  LimiterEntropy.h  decomp.cpp  fem_dg.h  fem_dg_implicit.cpp  fem_dg_implicit.h  solver.cpp
src/methods/solvers/: Initializator.cpp  Initializator.h  MatrixSolver.cpp  MatrixSolver.h  SolverAMGX.cpp  SolverAMGX.h  SolverAMGXImpl.cpp  SolverAMGXImpl.h
